@@ -16,7 +16,7 @@ import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
 public class MoleculeShapesSimSharing {
 
     public static enum UserComponents implements IUserComponent {
-        backgroundColor, bond, draggingState, mouseMiddleButton, moleculeShapesTab, realMoleculesTab, moleculeComboBox,
+        backgroundColor, bond, draggingState, mouseMiddleButton, moleculeShapesTab, realMoleculesTabWithKit, moleculeComboBox, realMoleculesTabWithComboBox,
         showLonePairsCheckBox, showAllLonePairsCheckBox, showBondAnglesCheckBox,
         moleculeGeometryCheckBox, electronGeometryCheckBox,
         realViewCheckBox, modelViewCheckBox,
