@@ -1,3 +1,4 @@
+Simsharing: Updated tab messages
 # 1.02.01 (61024) Feb 5, 2012
 # 1.02.00 (60769) Jan 30, 2012
 > Added "Basics" version
